classDiagram
    class Customer {
        +id: AutoField
        +name: CharField
        +phone: CharField
        +email: CharField
        +address: TextField
        +created_by: ForeignKey~User~
        +created_at: DateTimeField
        +updated_by: ForeignKey~User~
        +updated_at: DateTimeField
        +notes: TextField
    }
    Customer "1" --> "1" User: created_by
    Customer "1" --> "1" User: updated_by